<resources>
    <string name="app_name">QuarantineApp</string>
    <string name="choose_a_category">Choose a category:</string>
    <string name="online_games">online games</string>
    <string name="free_games">free games</string>
    <string name="mobile_games">mobile games</string>
    <string name="no_device_required">no device required</string>
    <string name="paid_games">paid games</string>
    <string name="limited_supplies_required">limited supplies required</string>
    <string name="other_virtual_activities">other virtual activities</string>
    <string name="welcome_to_quarantine_games">Welcome to Quarantine Games!</string>
    <string name="are_you_bored_in_the_house_and_in_the_house_bored">Are you bored in the house and in the house bored?</string>
    <string name="click_here_to_find_some_games">Click here to find some games!</string>
    <string name="online_games2">Online Games</string>
    <string name="fake_artist_online">Fake Artist Online</string>
    <string name="online_games3">Online Games:</string>
    <string name="mobile_games2">Mobile Games:</string>
    <string name="skribbl_io">Skribbl.io</string>
    <string name="club_penguin">Club Penguin</string>
    <string name="kahoot">Kahoot</string>
    <string name="minecraft">Minecraft</string>
    <string name="monopoly_online">Monopoly Online</string>
    <string name="pogo_com">Pogo.com</string>
    <string name="house_party">House Party</string>
    <string name="mario_kart">Mario Kart</string>
    <string name="scrabble">Scrabble</string>
    <string name="some_supplies_required">Some Supplies Required</string>
    <string name="telephone_pictionary">Telephone Pictionary</string>
    <string name="some_supplies_required2">Some Supplies Required:</string>
    <string name="random_generator">Random Generator:</string>
    <string name="none" />
    <string name="none1" />
    <string name="jackbox">jackbox</string>
    <string name="back_main_menu">Back to menu</string>
</resources>
