<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBE8A6">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/choose_a_category"
        android:textColor="#303C6C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <ScrollView
        android:layout_width="362dp"
        android:layout_height="686dp"
        android:layout_marginTop="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/goToOnlineGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4DFE5"
                android:fontFamily="monospace"
                android:text="@string/online_games"
                android:textColor="#303C6C" />

            <Button
                android:id="@+id/goToMobileGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4976C"
                android:fontFamily="monospace"
                android:text="@string/mobile_games"
                android:textColor="#303C6C" />

            <Button
                android:id="@+id/goToSomeSupplies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4976C"
                android:fontFamily="monospace"
                android:text="@string/some_supplies_required"
                android:textColor="#303C6C" />

            <Button
                android:id="@+id/goToFreeGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4DFE5"
                android:fontFamily="monospace"
                android:text="@string/free_games"
                android:textColor="#303C6C" />

            <Button
                android:id="@+id/goToPaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F4976C"
                android:fontFamily="monospace"
                android:text="@string/paid_games"
                android:textColor="#303C6C" />

            <Button
                android:id="@+id/goToOtherActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B4DFE5"
                android:fontFamily="monospace"
                android:text="@string/other_virtual_activities"
                android:textColor="#303C6C" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>